src/app/globals.css
/* FONT */
/* 
@font-face {
  font-family: 'Proxima Nova';
  src: url('/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.eot');
  src: url('/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.eot?#iefix')
      format('embedded-opentype'),
    url('/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.woff') format('woff'),
    url('/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.ttf') format('truetype'),
    url('/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.svg#proxima_nova_altregular')
      format('svg');
  font-weight: normal;
  font-style: normal;
} */

html {
  scroll-behavior: smooth;
}

body {
  min-height: 30rem; /* Can be removed; just added for demo purposes */
  margin: 0;

  /* Old Colours */
  --red: #ee6352;
  /* --blue: #416cde; */
  --cyan: #46b1c9;
  --pink: #f16571;
  --pink-bright: #ee4266;
  --brown: #a3825f;
  --brown-gray: #4e4e4e;
  --orange: #f04e27;
  --aqua-green: #49c5a1;
  --dark-pink: #cf9aae;
  --green: #1e6464;

  /* New Colours */
  --aqua-green: #49c5a1;
  --red: #ee6352;
  --blue: #6699cc;
  --yellow: #f2cd5d;

  --red-darker: #c94e3f;

  /*--hltb-color: #287fc2;*/ /* Old blue  */
  --hltb-color: #ec9444; /* New Yellow  */
  /*--metacritic-color: #6c3;*/ /* Old Green */
  --metacritic-color: #00ce7a; /* New Green */
  --igdb-color: #9147ff;

  /* Darker versions for hovers */
  --aqua-green-darker: #3faf8f;

  /* Others colors that match */
  --gray: #c1cfcc;
  --pink: #deaeae;
  --gray-blue: #a8cef3;
  --green-gray: #91b8ae;
  --blue-darker: #2656d9;

  /* Letters */
  --letter-light: rgba(255, 255, 255, 0.9);

  /* Gray Scale */
  --gray-0: #343a40;
  --gray-1: #49525a;
  --gray-2: #4f5b66;
  --gray-3: #65737e;
  --gray-4: #a7adba;

  /* Others */
  --white: rgba(235, 235, 235, 1); /* #ebebeb */
  --white-darker: rgba(235, 235, 235, 0.8);
  --white-darkest: rgba(235, 235, 235, 0.6);

  /* Global CSS Vars */
  /* --primary-color: var(--red); */
  /* --primary-color-darker: var(--blue-darker); */
  --primary-color: var(--aqua-green);
  --primary-color-darker: var(--aqua-green-darker);
  --secondary-color: var(--red);
  /* --danger-color: #f44336; */
  --danger-color: var(--red);
  --danger-color-darker: var(--red-darker);
  --success-color: var(--aqua-green);
  --warning-color: var(--yellow);
  /*
  These are defined in the layout of main of nextjs
  --primary-font
  --font-title
  */

  color: var(--letter-light);
  /* font-family: var(--primary-font), Arial; */
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  background-color: var(--white);
}
/*-------------------------------------------------------*/

/* BASELINE ---------------------------------------------*/

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  /* font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif; */
  letter-spacing: 0;
  font-weight: normal;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

h1 strong,
h2 strong,
h3 strong,
h4 strong,
h5 strong,
h6 strong {
  color: var(--white);
}

h1 {
  font-size: 6rem;
  line-height: 1.167;
}

h2 {
  font-size: 3.75rem;
  line-height: 1.2;
}

h3 {
  font-size: 3rem;
  line-height: 1.167;
}

h4 {
  font-size: 2.125rem;
  line-height: 1.235;
}

h5 {
  font-size: 1.5rem;
  line-height: 1.334;
}

h6 {
  font-size: 1.25rem;
  line-height: 1.6;
}
a,
a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
}

.game-category-not-0,
.mini-chip.game-category-not-0 {
  background-color: var(--red);
}

/* TOP APP BAR ------------------------------------------*/
.menu-button {
  position: relative;
  left: -10px;
}
/*-------------------------------------------------------*/

/* SECTION TITLE ----------------------------------------*/
.section-title {
  margin-bottom: 40px;
}

.section-title__pre {
  display: flex;
  flex-direction: flex-start;
}

.section-title__chips {
  margin-top: 8px;
}

.wrapper {
  background-color: var(--gray-0);
}

/*-------------------------------------------------------*/

/* SECTION SEARCH ---------------------------------------*/
.section-search hr {
  margin-right: 16px;
}

.section-search__form {
  position: relative;
}

.section-search__question {
  position: absolute;
  top: -15px;
  right: -8px;
}

/*-------------------------------------------------------*/

/* PLAYED COMPONENT -------------------------------------*/
.PlayedComponent,
.PlayedComponent.MuiCard-root {
  background-color: var(--white);
  color: var(--gray-0);
  height: 59px;
  /* font-family: var(--font-title); */
  /* flexDirection: 'row', mb: 2, justifyContent: 'flex-start' }} */
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-bottom: 16px;
  padding: 16px;
}

/*-------------------------------------------------------*/

.modal {
  background-color: var(--gray-0);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 500px;
  /* padding: 32px; */
}

.MuiAppBar-root.MuiAppBar-colorPrimary {
  background-color: var(--white);
}

.MuiToolbar-root {
  align-items: center;
}

.MuiToggleButtonGroup-root {
  outline: 1px solid #00000000;
}

.MuiPaper-root .MuiAccordionSummary-root,
.MuiAccordionDetails-root {
  background-color: var(--gray-2);
  line-height: 1.3;
}

.error-outline {
  outline-color: var(--danger-color);
}

.MuiMasonry-root {
  width: calc(100% + 16px);
}

.MuiMenu-paper a {
  color: inherit;
}
.MuiButtonBase-root.MuiIconButton-root.hid-aura {
  background-color: inherit;
}
.PlayedComponent .MuiButtonBase-root.MuiIconButton-root {
  color: rgba(0, 0, 0, 0.54);
}

.PlayedComponent .MuiButtonBase-root.MuiIconButton-root:hover {
  background-color: rgba(0, 0, 0, 0.04);
  /* color: var(--white); */
}

.MuiTypography-root.brand {
  margin-left: 20px;
  padding: 0;
  font-family: var(--font-brand), sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  font-size: 22px;
  color: var(--gray-0);
}
.MuiTypography-root.color-white {
  color: white;
}
.MuiButton-root {
  color: white !important;
}

/* .MuiCard-root.MuiPaper-root p {
  color: var(--white);
  filter: brightness(0.9);
} */

.MuiCard-root.game-card {
  /* background-color: var(--primary-color); */
  background-color: var(--gray-2);
}
.GameCardLite {
  position: relative;
  font-size: 14px;
}
.GameCardLite__Question {
  position: absolute;
  top: 0;
  right: 0;
}

.side-menu .MuiListItemButton-root {
  text-transform: uppercase;
}

.game-card {
  container-type: inline-size;
}

.game-card .title-font {
  color: white;
  font-size: clamp(20px, 6cqw, 40px);
}

.game-card img {
  width: 100%;
}
.game-card.game-card-xs {
  width: 178.67px;
}

.game-card-actions {
  position: absolute;
  top: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.3);
}

.game-card-actions .MuiButtonBase-root {
  /* font-size: 30px; */
  /* margin: 5px; */
  /* cursor: pointer; */
  margin-left: 0;
  color: white;
}

.game-card-chip-container {
  margin-bottom: 8px;
}

.game-card-chip-container:last-child {
  margin-bottom: 0;
}

.MuiTypography-root.error-feedback,
.error-feedback {
  font-size: 13px;
  color: var(--danger-color);
  margin-left: 14px;
  min-height: 20px;
}

/* MAIN   -----------------------------------------------*/
main {
  min-height: calc(100vh - 105px);
}

/* FOOTER -----------------------------------------------*/

footer {
  background-color: var(--white);
  color: var(--gray-0);
}

/* BY YEAR PAGE -----------------------------------------*/

.year-card a .MuiTypography-root {
  color: var(--white);
}
.year-card a .MuiTypography-root:hover {
  filter: brightness(1.4);
}

/* REUSABLE ---------------------------------------------*/

.mb-1 {
  margin-bottom: 8px;
}
.mb-2 {
  margin-bottom: 16px;
}
.mb-3 {
  margin-bottom: 24px;
}
.mb-4 {
  margin-bottom: 32px;
}
.mb-5 {
  margin-bottom: 40px;
}

.mt-1 {
  margin-top: 8px;
}
.mt-2 {
  margin-top: 16px;
}
.mt-3 {
  margin-top: 24px;
}
.mt-4 {
  margin-top: 32px;
}
.mt-5 {
  margin-top: 40px;
}

.ml-1 {
  margin-left: 8px;
}

.ml-2 {
  margin-left: 16px;
}

.ml-3 {
  margin-left: 24px;
}

.ml-4 {
  margin-left: 32px;
}

.ml-5 {
  margin-left: 40px;
}

.mr-1 {
  margin-right: 8px;
}

.mr-2 {
  margin-right: 16px;
}

.mr-3 {
  margin-right: 24px;
}

.mr-4 {
  margin-right: 32px;
}

.mr-5 {
  margin-right: 40px;
}

.my-1 {
  margin-top: 8px;
  margin-bottom: 8px;
}

.my-2 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.my-3 {
  margin-top: 24px;
  margin-bottom: 24px;
}

.mx-4 {
  margin-left: 32px;
  margin-right: 32px;
}

.mx-5 {
  margin-left: 40px;
  margin-right: 40px;
}
.mx-1 {
  margin-left: 8px;
  margin-right: 8px;
}

.mx-2 {
  margin-left: 16px;
  margin-right: 16px;
}

.mx-3 {
  margin-left: 24px;
  margin-right: 24px;
}

.mx-4 {
  margin-left: 32px;
  margin-right: 32px;
}

.my-5 {
  margin-top: 40px;
  margin-bottom: 40px;
}

.text-align-center {
  text-align: center;
}

.igdb-color {
  color: var(--igdb-color);
}
.igdb-background-color,
.mini-chip.igdb-background-color {
  background-color: var(--igdb-color);
}
.chip {
  padding: 8px 12px;
  border-radius: 20px;
  margin: 5px 3px 0 0;
  background-color: var(--secondary-color);
}
.MuiChip-root.success .MuiChip-icon {
  position: relative;
  top: 2px;
}

.MuiChip-root.rounded {
  border-radius: 5px;
}
.MuiChip-root.hasIcon {
  padding-left: 8px;
}
.MuiChip-root.success .MuiChip-icon {
  color: white;
}
.MuiChip-root.danger .MuiChip-icon {
  color: white;
}
.MuiChip-root.warning .MuiChip-icon {
  color: black;
}

.chip:last-child {
  margin-right: 0;
}
.MuiChip-root.success {
  background-color: var(--success-color);
  color: white;
}
.MuiChip-root.danger {
  background-color: var(--danger-color);
  color: white;
}
.MuiChip-root.warning {
  background-color: var(--warning-color);
  color: black;
}
.mini-chip {
  padding: 3px 5px;
  border-radius: 10px;
  background-color: var(--gray-2);
}
.cursor-pointer {
  cursor: pointer;
}
.word-break-word {
  width: 90%;
  word-wrap: break-word;
}
.color-primary {
  color: var(--primary-color);
}
.MuiAvatar-circular.success-background {
  background-color: var(--success-color);
}
.MuiAvatar-circular.warning-background {
  background-color: var(--warning-color);
}
.MuiAvatar-circular.danger-background {
  background-color: var(--danger-color);
}
.MuiAvatar-circular.color-white {
  color: white;
}
.no-padding {
  padding: 0 !important;
}
.line-height-1 {
  line-height: 1;
}
.color-white {
  color: white;
}
.w-100 {
  width: 100%;
}
.h-w-100 {
  width: 100%;
}
.d-flex {
  display: flex;
  align-items: center;
}
.flex-direction-row {
  flex-direction: row;
}
.flex-wrap-wrap {
  flex-wrap: wrap;
}
.border-radius {
  border-radius: 2%;
}
.text-transform-capitalize {
  text-transform: capitalize;
}
.title-font,
.MuiTypography-root.title-font {
  font-family: var(--font-title);
  /* color: var(--primary-color); */
}
.font-size-15 {
  font-size: 15px;
}

.date-picker {
  color-scheme: dark;
}

/*-------------------------------------------------------*/
@keyframes shrinkAndFade {
  from {
    transform: scale(1);
    opacity: 1;
    height: auto;
    margin-bottom: 16px; /* Adjust to match your masonry gap */
  }
  to {
    transform: scale(0.8);
    opacity: 0;
    height: 0;
    margin-bottom: 0;
  }
}

.game-card-disappearing {
  animation: shrinkAndFade 0.5s forwards;
}

.MuiTypography-root.congratulations {
  font-size: 7vw;
  color: '#fff';
  text-align: 'center';
  font-family: var(--font-congrats);
  font-weight: 900;
}

